--- a/css/alert.css
+++ b/css/alert.css
@@ -1,4 +1,4 @@
-#alert{
+.alert{
     visibility: hidden;
     opacity: 0;
     position: fixed;
@@ -9,11 +9,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 9999;
 }
 
 
 
-#alert.show{
+.alert.show{
     opacity: 1;
     visibility: visible;
     
@@ -67,5 +68,6 @@
         transform: translate(-50%, 0);
         border-radius: 20px;
         opacity: 0;
+        visibility: hidden;
     }
 }
