--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@
   font-family: 'Raleway', serif !important;
 }
 
+body{
+  background-color: #eee;
+}
+
 .jumbotron .display-4 {
   font-weight: bold;
 }
@@ -216,6 +220,13 @@ a.custom-card:hover {
   color: white;
 }
 
+#container-main{
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 20px auto;
+}
+
 #carusel-control-prev{
   background: linear-gradient(to right, #00000094, #00000000);
 }
@@ -257,4 +268,32 @@ a.custom-card:hover {
 
 .protect-buy_text{
   color: #ffffff;
+}
+
+
+/* Nav avatar profile */
+
+.nav-icon{
+  font-size: 1.3em;
+  border-radius: 100%;
+  color: #0d6efd;
+}
+
+.dropdown-item{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.avatar-nav-profile{
+  width: 32px;
+  height: 32px;
+  border-radius: 100%;
+}
+
+#logo-navbar{
+  color: #229fbc;
+  font-weight: 800;
+  font-size: 1.5em;
 }
